# erp-backend

./: .dockerignore  .env.example  .env.production.example  .gitignore  .secrets.baseline  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
.claude/: settings.json
.claude/agents/: architecture-reviewer.md  security-auditor.md  security-scanner.md
.claude/skills/clean-architecture/: SKILL.md
.claude/skills/secure-coding/: SKILL.md
.docker/: Dockerfile  Dockerfile.dev  compose.prod.yml  compose.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 32a23eb74df2_sprint3_monitor_id_monitor_salary_api_.py  4309307e2bc8_sprint4_5_6_7_backend.py  6cbb30dacf33_initial_schema.py
app/: config.py  database.py  main.py  redis.py
app/api/v1/: api_keys.py  auth.py  bio_templates.py  chat.py  exchange_rates.py  exports.py  extension.py  health.py  liquidations.py  macros.py  metrics.py  monitor_salaries.py  notifications.py  rooms.py  router.py  salary_advance_requests.py  shift_reports.py  shifts.py  split_configs.py  tags.py  technical_sheets.py  users.py
app/core/: api_key_auth.py  dependencies.py  html_sanitizer.py  middleware.py  pagination.py  rate_limit.py  security.py  tenant.py  ws_hub.py
app/models/: __init__.py  api_key.py  audit_log.py  automation_job.py  base.py  bio_template.py  chat_message.py  exchange_rate.py  liquidation.py  macro.py  monitor_salary.py  notification.py  room.py  salary_advance_request.py  shift.py  shift_report.py  split_config.py  tag.py  technical_sheet.py  tenant.py  user.py
app/schemas/: api_key.py  auth.py  bio_template.py  chat.py  exchange_rate.py  liquidation.py  macro.py  metrics.py  monitor_salary.py  notification.py  room.py  salary_advance_request.py  shift.py  shift_report.py  split_config.py  tag.py  technical_sheet.py  user.py
app/services/: api_key.py  auth.py  bio_template.py  chat.py  errors.py  exchange_rate.py  exports.py  liquidation.py  macro.py  metrics.py  monitor_salary.py  notification.py  room.py  salary_advance_request.py  shift.py  shift_report.py  split_config.py  tag.py  technical_sheet.py  user.py
app/workers/: tasks.py
docs/: api-reference.md  architecture.md  configuration.md  frontend-auth.md  pagination.md  security.md
tests/: conftest.py
tests/api/: test_advanced_metrics.py  test_api_keys.py  test_audit_log.py  test_auth.py  test_bio_templates.py  test_chat.py  test_exchange_rates.py  test_exports.py  test_extension.py  test_liquidations_crud.py  test_macros_crud.py  test_me_endpoint.py  test_metrics.py  test_monitor_salaries_crud.py  test_notifications.py  test_pagination.py  test_rate_limit.py  test_rooms_crud.py  test_salary_advances.py  test_security_headers.py  test_shift_reports.py  test_shifts_crud.py  test_split_configs_crud.py  test_tags_crud.py  test_technical_sheets_crud.py  test_users_crud.py
